--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+apply from: './checkVersions.gradle'
+
 buildscript {
     apply from: 'versions.gradle'
     addRepos(repositories)
@@ -5,6 +7,7 @@ buildscript {
     dependencies {
         classpath deps.android_gradle_plugin
         classpath deps.kotlin.plugin
+        classpath deps.ben_manes_plugin
     }
 }
 
